--- a/app/src/main/res/layout/channel_item_outer_layout.xml
+++ b/app/src/main/res/layout/channel_item_outer_layout.xml
@@ -1,6 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/title_margin_start"
+    android:background="@color/backgroundColor">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/channel_title_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/channelIconImageView"
+            android:layout_width="@dimen/channel_icon_size"
+            android:layout_height="@dimen/channel_icon_size"
+            android:layout_marginStart="@dimen/episode_text_margin_start"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_launcher_background" />
+
+        <TextView
+            android:id="@+id/channelTitleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/episode_text_margin_start"
+            android:fontFamily="@font/roboto_bold"
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/episode_channel_text_size"
+            android:layout_marginTop="@dimen/channel_title_margin_top"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/channelIconImageView"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="MindValley mentoring" />
+
+        <TextView
+            android:id="@+id/channelMediaCountText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="@color/text_color_fade_second"
+            android:textSize="@dimen/episode_title_text_size"
+            app:layout_constraintStart_toStartOf="@id/channelTitleText"
+            app:layout_constraintTop_toBottomOf="@id/channelTitleText"
+            tools:src="@drawable/ic_launcher_background"
+            tools:text="78 episodes" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/innerRecyclerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/category_margin_top"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/channel_title_layout" />
+    <View
+        android:id="@+id/episodeRecyclerViewDivider"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="@dimen/category_margin_top"
+        android:background="@color/divider_color"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/innerRecyclerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
