--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#2F2F32</color>
+    <color name="colorPrimaryDark">#23272F</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="backgroundColor">#23272F</color>
+    <color name="text_color_fade">#C1C1C1</color>
+    <color name="text_color_fade_second">#95989D</color>
+    <color name="divider_color">#E5E5E5</color>
+    <color name="color_white">#FFFFFF</color>
 </resources>
